deploy/todo-demo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-demo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-demo-api
  template:
    metadata:
      labels:
        app: todo-demo-api
        tier: backend
    spec:
      containers:
        - name: app
          image: passon/todo-demo-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8220
