deploy/postgres-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-master
spec:
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres-master
    tier: backend
