deploy/todo-demo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-demo-api
spec:
  # type: ClusterIP
  type: NodePort
  ports:
    - name: todo-demo-api
      protocol: TCP
      port: 8220
      targetPort: 8220
      nodePort: 30390
  selector:
    app: todo-demo-api
    tier: backend
